tests/NormalTests/paczka1/fuzzy1/20354707.err
Error in line 5: l9Urwzxh4a A849 925,1
Error in line 6: RsEY A849 94,0
Error in line 10: cRNn S812 65,4
Error in line 17: RsEY A195 154,7
Error in line 20: tC8laUQDG S812 68,2
Error in line 23: l9Urwzxh4a A849 10,5
Error in line 30: l9Urwzxh4a S94 -4,1
Error in line 27: A849 S812 13,7
